
2008-07-31  Sancho Lerena <slerena@gmail.com>
	
	* include/help/en/help_plugin_definition.php: New help page for 
	plugin register section.

	* include/javascript/pandora.js: Help window now shows scrollbar.

	* general/pandora_help.php: Better layout for help system.

	* godmode/servers/plugin.php: Fixed position / menu issues and other
	menor bugs in plugin editor.

2008-07-31  Ramon Novoa  <rnovoa@artica.es>

	* include/help/en/help_wmiquery.php,
	  include/help/en/help_wmifield.php,
	  include/help/en/help_wmikey.php: Added to repository. WMI help pages.
	* include/languages/language_en.php, pandoradb.sql,
	  pandoradb_data.sql,
	  godmode/agentes/agent_template.php,
	  godmode/agentes/module_manager_editor_network.php,
	  godmode/agentes/module_manager_editor_wmi.php,
	  godmode/agentes/module_manager_editor.php,
	  godmode/modules/manage_network_components_form.php,
	  godmode/modules/manage_network_components.php: Added support for WMI
	  modules, including components and templates.
	* godmode/modules/manage_network_components_form_network.php,
	  godmode/modules/manage_network_components_form_wmi.php: Added to
	  repository. Component editors.


2008-07-30  Sancho Lerena <slerena@gmail.com>
	
	* pandoradb.sql: Some changes in structure for new export server. Removed
	and extra comma in tplanned_downtime.

	* pandoradb_data.sql: Deleted some stuff from Gigabit module templates, 
	too much.

	* logon_ok.php: Header update.

	* menu.php: Plugin editor moved under server section.

	* modificar_agente.php: Added icon to agent config editor from manage
	agents view.

	* links.php: Some code cleanup.

	* pandora.ico: New .ICO file for web, this will be official one for
	2.0 version.

	* functions_db.php: Fixed a problem in audit_db() where parameters
	was not properly cleaned and with ' chars this makes an SQL error.
	Fixed BUG #2032885, in function get_monitors_in_agent () where a 
	bad SQL forced an error in report.
