@@ -1,3 +1,6 @@
+2008-08-01  Manuel Arostegui <marostegui@artica.es>
+
+	* include/help/en/help_plugin_definition.php: Language corrections.
 
 2008-07-31  Sancho Lerena <slerena@gmail.com>
 	
